--- a/research.html
+++ b/research.html
@@ -4,6 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+ <style>
+    body {
+        font-family: 'Georgia', serif;
+        background-color: #f5f5f5;
+        text-align: center;
+        padding: 50px;
+    }
+
+    h1 {
+        font-size: 48px;
+        margin-bottom: 50px;
+        color: #2c3e50;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 1.5;
+        text-align: justify;
+        margin-bottom: 20px;
+        color: #34495e;
+    }
+
+    .highlight {
+        color: #e74c3c;
+    }
+</style>
+
   <title>index</title>
 </head>
 <body>
