--- a/conclusion.html
+++ b/conclusion.html
@@ -1,16 +1,17 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
- <style>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <style>
     body {
-        font-family: 'Georgia', serif;
-        background-color: #f5f5f5;
+        font-family: 'Lato', sans-serif;
+        background: linear-gradient(45deg, #f5f5f5, #eaeaea);
         text-align: center;
         padding: 50px;
         overflow: hidden;
+        margin: 0;
     }
 
     h1 {
@@ -27,11 +28,56 @@
         color: #34495e;
     }
 
-    .highlight {
+    header {
+        display: inline-block;
+        background-color: rgba(236, 240, 241, 0.9);
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav li {
+        display: inline;
+    }
+
+    nav li a {
+        display: inline-block;
+        padding: 10px;
+        color: #34495e;
+        text-decoration: none;
+        transition: color 0.3s;
+    }
+
+    nav li a:hover {
         color: #e74c3c;
     }
-</style>
 
+    .iframe-container {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .iframe-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 10px;
+    }
+  </style>
   <title>index</title>
 </head>
 <body>
@@ -51,11 +97,16 @@
 
   <main>
     <section id="index">
-    <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="600px" style="border: none;">
-  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
-</iframe>
+      <h1>The compass of validation</h1>
+           <div class="iframe-container">
+        <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="100%">
+          <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
+        </iframe>
+      </div>
     </section>
   </main>
- <script src="animations.js"></script>
+  <script src="animations.js"></script>
 </body>
 </html>
+
+
