--- a/conclusion.html
+++ b/conclusion.html
@@ -84,7 +84,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="Index.html">Index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="research.html">Research Paper</a></li>
         <li><a href="evidence.html">Supporting Evidence</a></li>
@@ -97,7 +97,7 @@
 
   <main>
     <section id="index">
-      <h1>The compass of validation</h1>
+      <h1>The Compass of Validation</h1>
            <div class="iframe-container">
         <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="100%">
           <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
