--- a/conclusion.html
+++ b/conclusion.html
@@ -5,27 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
         font-family: 'Lato', sans-serif;
         background: linear-gradient(45deg, #f5f5f5, #eaeaea);
-        text-align: center;
-        padding: 50px;
-        overflow: hidden;
         margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
     }
 
     h1 {
-        font-size: 48px;
-        margin-bottom: 50px;
+        font-size: 36px;
+        margin: 50px 0;
         color: #2c3e50;
-    }
-
-    p {
-        font-size: 18px;
-        line-height: 1.5;
-        text-align: justify;
-        margin-bottom: 20px;
-        color: #34495e;
     }
 
     header {
@@ -34,6 +31,7 @@
         border-radius: 10px;
         padding: 10px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        margin-bottom: 10px;
     }
 
     nav ul {
@@ -59,10 +57,9 @@
     }
 
     .iframe-container {
+        flex: 1;
         position: relative;
         width: 100%;
-        padding-bottom: 56.25%;
-        height: 0;
         overflow: hidden;
         border-radius: 10px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -98,15 +95,12 @@
   <main>
     <section id="index">
       <h1>The Compass of Validation</h1>
-           <div class="iframe-container">
-        <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="100%">
-          <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
-        </iframe>
-      </div>
-    </section>
-  </main>
-  <script src="animations.js"></script>
+      <div class="iframe-container">
+       <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview">
+  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
+</iframe>
+</div>
+</section>
+</main>
 </body>
 </html>
-
-
