--- a/conclusion.html
+++ b/conclusion.html
@@ -3,85 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    html, body {
-        font-family: 'Lato', sans-serif;
-        background: linear-gradient(45deg, #f5f5f5, #eaeaea);
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-    }
-
+  <link rel="stylesheet" href="styles.css">
+ <style>
     body {
-        display: flex;
-        flex-direction: column;
+        font-family: 'Georgia', serif;
+        background-color: #f5f5f5;
+        text-align: center;
+        padding: 50px;
+        overflow: hidden;
     }
 
     h1 {
-        font-size: 36px;
-        margin: 50px 0;
+        font-size: 48px;
+        margin-bottom: 50px;
         color: #2c3e50;
     }
 
-    header {
-        display: inline-block;
-        background-color: rgba(236, 240, 241, 0.9);
-        border-radius: 10px;
-        padding: 10px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        margin-bottom: 10px;
-    }
-
-    nav ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    nav li {
-        display: inline;
-    }
-
-    nav li a {
-        display: inline-block;
-        padding: 10px;
+    p {
+        font-size: 18px;
+        line-height: 1.5;
+        text-align: justify;
+        margin-bottom: 20px;
         color: #34495e;
-        text-decoration: none;
-        transition: color 0.3s;
     }
 
-    nav li a:hover {
+    .highlight {
         color: #e74c3c;
     }
+</style>
 
-    .iframe-container {
-        flex: 1;
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-        border-radius: 10px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .iframe-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-        border-radius: 10px;
-    }
-  </style>
   <title>index</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Index</a></li>
+        <li><a href="Index.html">Index</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="research.html">Research Paper</a></li>
         <li><a href="evidence.html">Supporting Evidence</a></li>
@@ -94,13 +51,11 @@
 
   <main>
     <section id="index">
-      <h1>The Compass of Validation</h1>
-      <div class="iframe-container">
-       <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview">
+    <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="600px" style="border: none;">
   <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
 </iframe>
-</div>
-</section>
-</main>
+    </section>
+  </main>
+ <script src="animations.js"></script>
 </body>
 </html>
