--- a/conclusion.html
+++ b/conclusion.html
@@ -4,14 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-   <style>
-  body {
-    background-image: url('https://drive.google.com/file/d/1fjZ44LUPIwHNt77DpuETWxN1fyZJaKQl/view?usp=share_link');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-</style>
+ 
  <style>
 
     body {
@@ -20,6 +13,11 @@
         text-align: center;
         padding: 50px;
         overflow: hidden;
+        background-image: url('https://drive.google.com/uc?export=view&id=1fjZ44LUPIwHNt77DpuETWxN1fyZJaKQl');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      
     }
 
     h1 {
