--- a/conclusion.html
+++ b/conclusion.html
@@ -44,7 +44,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="Index.html">index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="research.html">Research Paper</a></li>
         <li><a href="evidence.html">Supporting Evidence</a></li>
