--- a/conclusion.html
+++ b/conclusion.html
@@ -12,7 +12,7 @@
         background-color: #f5f5f5;
         text-align: center;
         padding: 50px;
-        background-image: url('https://drive.google.com/file/d/15XQmgf1Rya84pe0f7M2oAw859ik0fx6C');
+        background-image: url('https://drive.google.com/uc?export=view&id=15XQmgf1Rya84pe0f7M2oAw859ik0fx6C');
         background-size: cover;
         background-position: center;
        
