--- a/reflection.html
+++ b/reflection.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
  <style>
-    body {
-        font-family: 'Georgia', serif;
-        background-color: #f5f5f5;
-        text-align: center;
-        padding: 50px;
-     
-    }
+  
+  body {
+    font-family: 'Georgia', serif;
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 50px;
+    background-image: url('https://drive.google.com/uc?export=view&id=1EzdtsIoqz69wRXJWUu-8IhDKf_P25VsK');
+    background-size: cover;
+    background-position: center;
+  }
+  
 
     h1 {
         font-size: 48px;
