--- a/research.html
+++ b/research.html
@@ -6,12 +6,14 @@
   <link rel="stylesheet" href="styles.css">
  <style>
     body {
-        font-family: 'Georgia', serif;
-        background-color: #f5f5f5;
-        text-align: center;
-        padding: 50px;
-      
-    }
+    font-family: 'Georgia', serif;
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 50px;
+    background-image: url('https://drive.google.com/uc?export=view&id=18Eo34OOe53fmcJx84nywDuLDn8koCEDu');
+    background-size: cover;
+    background-position: center;
+  }
 
     h1 {
         font-size: 48px;
