--- a/index.html
+++ b/index.html
@@ -73,20 +73,14 @@
 
 <!-- index -->
 <section id="index">
-  <h1>Welcome to My Research Project</h1>
-  <p>The authentic self, an exploration of gender in a broader social context. .</p>
+  <h1>The authentic self, an exploration of gender in a broader social context</h1>
 </section>
-  
-<!-- Search Results -->
-<div class="search-results" id="search-results" style="display: none;">
-  <h3>Search Results:</h3>
-  <ul id="search-results-list"></ul>
-</div>
+
 
 <!-- About -->
 <section id="about">
   <h2>About Me</h2>
-  <img src="your-image-url.jpg" alt=" Nezar Khabiry" class="profile-picture">
+  <img src="https://drive.google.com/uc?export=view&id=1V02SF8elm3W4aSoFu9UI6ZPf2POEfwMl" alt=" Nezar Khabiry" class="profile-picture">
   <p>Hi, I'm Nezar Khabiry, a positive and focused student with a strong background in computer science and information analytics. Currently, I'm pursuing a Bachelor of Science in Information Science with a concentration on Information Analytics and a minor in Computer Science at the University of North Carolina Greensboro (UNCG), with an expected graduation date in 2025. I am skilled in various programming languages and platforms, including Java, Python, Rust, and R, and have experience with AWS cloud-based solutions and SQL.</p>
   <p>I am passionate about helping and talking to people, and I am always curious and determined to learn new things. I am driven by passion and dedicate myself to activities and projects that truly matter to me. Over the past three years, I have embarked on a journey to explore my identity through a critical lens.</p>
   <p>Throughout my academic and professional life, I have consistently gone above and beyond expectations. I have completed over 100 cumulative hours of community service, showcasing my dedication to helping others and making a positive impact. As a highly adaptable individual, I am capable of learning new technologies quickly and working well with diverse groups.</p>
