--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     h1 {
-        font-size: 48px;
+        font-size: 30px;
         margin-bottom: 50px;
         color: #2c3e50;
     }
@@ -73,7 +73,7 @@
 
 <!-- index -->
 <section id="index">
-  <h1>The authentic self, an exploration of gender in a broader social context</h1>
+ <h1 class="title-highlight">The authentic self, an exploration of gender in a broader social context</h1>
 </section>
 
 
