--- a/evidence.html
+++ b/evidence.html
@@ -174,12 +174,13 @@
          <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRK41WkM8uoSql7anmUl4DjMezsd7-9eM0AiG_ZaD7760KJ9k2HDO4jEVyF7a3TXzDUz8ll29CNyOZO/pubchart?oid=252756511&amp;format=interactive"></iframe>
                  <p>These charts and graphs provide a visual representation of the data gathered from both surveys. They help to illustrate the key findings and trends identified through the analysis.</p>
 
+        <body>
+    <section>
         <h2>Connection to Withers (2020) Article</h2>
-        <p>In light of the survey data, the findings appear to [support/challenge] the arguments presented in Withers (2020). [Provide a brief discussion of how the survey results connect to the article]</p>
+        <p>In light of the survey data, the findings appear to challenge the arguments presented in Withers (2020). The data supports the notion put forth by Herdzik (2021) that gender expression is a form of individuation and authentic self, rather than merely an attempt to evade psychological distress as suggested by Withers (2020). The majority of respondents (60%) in the second survey agreed that gender is a representation of the authentic self and that people become what they identify with, regardless of their assigned sex. This highlights the importance of individuation in the development of gender identities, as outlined by Herdzik (2021), and provides evidence against the idea that conformity to societal expectations is the primary driving force behind gender expression.</p>
 
         <h2>Conclusion</h2>
-        <p>In conclusion, the survey data offers valuable insights into the topics discussed in the Withers (2020) article. These findings can be used to further our understanding of the subject matter and inform future research or policy decisions.</p>
+        <p>In conclusion, the survey data offers valuable insights into the topics discussed in the Withers (2020) article. These findings can be used to further our understanding of the subject matter and inform future research or policy decisions. The data shows that a significant portion of the surveyed population views gender as an integral part of their authentic selves, which supports the individuation perspective. This challenges Withers' argument that transgender individuals seek gender-affirming care mainly to evade psychological distress and highlights the need for a more nuanced understanding of gender expression and its connection to the authentic self.</p>
     </section>
 </body>
-
 
