--- a/evidence.html
+++ b/evidence.html
@@ -164,7 +164,7 @@
 
   <p>Withers (2020) does not provide an absolute characterization of the authentic transgender experience, as individual experiences and identities are diverse and nuanced. This emphasizes the importance of considering the complexities of gender expression and identity in discussions and analyses.</p>
 </section>
-         
+ <section>      
             <h2>Charts and Graphs</h2>
             
          <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRx38Gm7kbepmE1t0dgvtlyBKlMSNxkaaedhfx-FW2RA-yemKZiAK646M1fHOOJXDGpabQqBJg2WVNd/pubchart?oid=1233707998&amp;format=interactive"></iframe>
@@ -173,7 +173,7 @@
          <iframe width="600" height="396" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRK41WkM8uoSql7anmUl4DjMezsd7-9eM0AiG_ZaD7760KJ9k2HDO4jEVyF7a3TXzDUz8ll29CNyOZO/pubchart?oid=2027621819&amp;format=interactive"></iframe>
          <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRK41WkM8uoSql7anmUl4DjMezsd7-9eM0AiG_ZaD7760KJ9k2HDO4jEVyF7a3TXzDUz8ll29CNyOZO/pubchart?oid=252756511&amp;format=interactive"></iframe>
                  <p>These charts and graphs provide a visual representation of the data gathered from both surveys. They help to illustrate the key findings and trends identified through the analysis.</p>
-
+</section>
         <body>
     <section>
         <h2>Connection to Withers (2020) Article</h2>
