--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <!-- Supporting Evidence -->
 <section id="Methods">
-  <h2>Methods:Quantitative and Qualitative</h2>
+  <h2>Methods</h2>
   <p>To gauge the complexity and diversity of perspectives, we chose to gather information through two surveys. We sent out both surveys to a college demographic and posted them online to broaden the respondent base. 
    The first survey was titled &quot;Gauging Support for Withers, R. (2020): Transgender Medicalization and the Attempt to Evade Psychological Distress.&quot; 
    The questions were formulated based on the claims brought up in response to Withers or by Withers. We developed the questions around the Likert scale to enable numeric analysis.
